fixed screen overflowing to the right issue, add company component is now more beutiful and has the functionality to require linkedin url

--- a/src/App.css
+++ b/src/App.css
@@ -1,16 +1,20 @@
-html, body, #root {
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
-  overflow-x: hidden;
-  overflow-y: hidden;
+html,
+body,
+#root {
+  width: 100%;
+  height: 100%;
 }
 *,
 *::before,
 *::after {
-  box-sizing: inherit;
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
 }
 
+body {
+  min-height: 100vh;
+}
 .logo {
   height: 6em;
   padding: 1.5em;
